Pin bun lockfile to prod. See https://github.com/oven-sh/bun/issues/17011#issuecomment-2769196629

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           bun-version: latest
 
       - name: Install Dependencies
-        run: bun install
+        run: bun install --production --frozen-lockfile --prefer-offline --ignore-scripts
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
