--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Install Snapcraft
+        uses: samuelmeuli/action-snapcraft@v1.2.0
+        # Only install Snapcraft on Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
         run: npm run build:linux
