--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,10 @@ jobs:
         run: npm install
 
       - name: Install Snapcraft
-        uses: samuelmeuli/action-snapcraft@v1.2.0
         # Only install Snapcraft on Ubuntu
         if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo snap install snapcraft --classic
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
