--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,13 +3,14 @@ name: Build/release Electron app
 on:
   push:
     tags:
-      - v1.0.0
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   release:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
@@ -17,13 +18,28 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('bun.lockb') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
+      - name: Print version info
+        run: |
+          bun --version
+          node --version
+          npm --version
+          echo "Electron version: $(bun run electron --version || true)"
+
       - name: Install Dependencies
-        run: bun install
+        run: bun install --production --frozen-lockfile --prefer-offline --ignore-script
 
       - name: Install Snapcraft
         # Only install Snapcraft on Ubuntu
