--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,11 @@ jobs:
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
-        run: bun run build:linux
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPCRAFT_STORE_CREDENTIALS }}
+        run: |
+          export SNAPCRAFT_STORE_CREDENTIALS=${SNAPCRAFT_STORE_CREDENTIALS}
+          bun run build:linux
 
       - name: build-mac
         if: matrix.os == 'macos-latest'
